Fixed email link overflow issue on small resolutions

--- a/src/style.css
+++ b/src/style.css
@@ -214,6 +214,10 @@ p {
     text-align: center !important;
     font-size: 40px;
   }
+
+  #myemail {
+    font-size: 25px !important;
+  }
 }
 
 .support {
